infrastructure/workloads/base/gateway-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  labels:
    app.kubernetes.io/name: gateway-service
    app.kubernetes.io/part-of: payu
    app.kubernetes.io/component: backend
    app.kubernetes.io/version: 1.18.74
    app.kubernetes.io/managed-by: platform-team
    team: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gateway-service
        app.kubernetes.io/part-of: payu
        app.kubernetes.io/component: backend
        app.kubernetes.io/version: 1.18.74
        app.kubernetes.io/managed-by: platform-team
        team: backend
    spec:
      securityContext:
        runAsNonRoot: true
      serviceAccountName: gateway-service
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: gateway-service
      volumes:
      - name: tmp
        emptyDir: {}
      containers:
      - name: app
        image: image-registry.openshift-image-registry.svc:5000/payu-dev/gateway-service:1.18.74
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        readinessProbe:
          httpGet:
            path: /q/health/live
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /q/health/live
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 15
        startupProbe:
          httpGet:
            path: /q/health/live
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 90
        lifecycle:
          preStop:
            exec:
              command:
              - sh
              - -c
              - sleep 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1Gi
