infrastructure/workloads/base/gateway-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app.kubernetes.io/name: gateway-service
    app.kubernetes.io/part-of: payu
    app.kubernetes.io/version: 1.7.9
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gateway-service
  ports:
  - port: 8080
    targetPort: 8080
    name: http
