infrastructure/workloads/base/gateway-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gateway-service
  labels:
    app.kubernetes.io/name: gateway-service
    app.kubernetes.io/part-of: payu
    app.kubernetes.io/component: backend
    app.kubernetes.io/version: 1.8.2
    team: backend
spec:
  to:
    kind: Service
    name: gateway-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
